[metadata]
name = grig
author = SOFIA-USRA
author_email = mclarke@sofia.usra.edu
license = BSD 3-Clause
license_files = licenses/LICENSE.rst
url = https://sofia-usra.github.io/grig
description = N-Dimensional Resampler for Irregularly Gridded Data
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = SOFIA-USRA/grig

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
setup_requires = setuptools_scm
install_requires =
    astropy
    bottleneck
    configobj
    joblib
    matplotlib
    numba
    numpy
    pandas
    scikit-learn
    scipy

[options.extras_require]
test =
    pytest
    pytest-astropy
    pytest-mock
    pytest-timeout
docs =
    sphinx-astropy
    psutil
    imageio

[options.package_data]
grig = data/*

[tool:pytest]
testpaths = "grig" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    grig/_astropy_init*
    grig/conftest.py
    grig/*setup_package*
    grig/tests/*
    grig/*/tests/*
    grig/extern/*
    grig/version*
    */grig/_astropy_init*
    */grig/conftest.py
    */grig/*setup_package*
    */grig/tests/*
    */grig/*/tests/*
    */grig/extern/*
    */grig/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[flake8]
exclude = extern,sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py,version.py,__init__.py
ignore = W503